deploy/aods-system/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aods-backend
spec:
  selector:
    app: aods-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
