deploy/aods-system/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aods-frontend
spec:
  selector:
    app: aods-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
